--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <script src="js/script.js"></script>
+    <input id="age" value="30">
+    <script src="js/script1.js"></script>
 </body>
 </html>
