--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <input id="age" value="30">
-    <script src="js/script1.js"></script>
+    <select>
+        <option value='red'>Красный</option>
+        <option value='green'>Зеленый</option>
+        <option value='yellow'>Желтый</option>
+    </select>
+    <script src="js/script2.js"></script>
 </body>
 </html>
